[gd_scene load_steps=4 format=3 uid="uid://b3yidvf8mxqqd"]

[ext_resource type="Script" path="res://scripts/UI scripts/NewGameButton.gd" id="1_0nysw"]
[ext_resource type="Script" path="res://scripts/UI scripts/MainMenu.gd" id="1_hnefl"]

[sub_resource type="Theme" id="Theme_jgngg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 224.0
theme = SubResource("Theme_jgngg")
script = ExtResource("1_hnefl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 224.0
color = Color(0.100575, 0.154434, 0.0815076, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 224.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "2wer Defe^nse"
horizontal_alignment = 1
vertical_alignment = 3

[node name="ButtonVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonVBox"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath("../QuitGameButton")
focus_next = NodePath(".")
focus_previous = NodePath("../QuitGameButton")
theme_override_font_sizes/font_size = 18
text = "Start Game
"
script = ExtResource("1_0nysw")

[node name="QuitGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonVBox"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 18
text = "Exit"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonVBox/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonVBox/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
